tests/invalid/forstatements.nim
# Count: 1
# Negative count: 0

for i in [1 .. 6]:
  echo i
